feat: add search per doi and list all DOIs in documents/ endpoint. The list all using a header for full view by default shows only the DOIs.
